tests/baselines/reference/dontShowCompilerGeneratedMembers.errors.txt
tests/cases/compiler/dontShowCompilerGeneratedMembers.ts(1,5): error TS2322: Type '数字' is not assignable to type '{ (): 任意; x: 数字; }'.
tests/cases/compiler/dontShowCompilerGeneratedMembers.ts(3,6): error TS1139: Type parameter declaration expected.
tests/cases/compiler/dontShowCompilerGeneratedMembers.ts(4,1): error TS1109: Expression expected.


==== tests/cases/compiler/dontShowCompilerGeneratedMembers.ts (3 errors) ====
    var f: {
        ~
!!! error TS2322: Type '数字' is not assignable to type '{ (): 任意; x: 数字; }'.
        x: number;
        <-
         ~
!!! error TS1139: Type parameter declaration expected.
    };
    ~
!!! error TS1109: Expression expected.